test/errors/type/str/startswith2.yasl
''.startswith(1, .true)
